Fix infinite recursion inside WebProcess constructor https://bugs.webkit.org/show_bug.cgi?id=98206

Reviewed by Brian Weinstein.

Don't call WebProcess::shared from the WebGeolocationManager constructor since it is invoked from the WebProcess constructor.

* WebProcess/Geolocation/WebGeolocationManager.cpp:
(WebKit::WebGeolocationManager::WebGeolocationManager):

Canonical link: https://commits.webkit.org/116216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130217 268f45cc-cd09-0410-ab3c-d52691b4dbfc